CH1_10 Shaders1 https://www.youtube.com/watch?v=AL3W2JfVVgw&list=PL0luF_aDUOooIB56NOFVTS4ahMzBHS_6z&index=10

--- a/TestOpenGL/TestOpenGL.vcxproj.filters
+++ b/TestOpenGL/TestOpenGL.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="ch1_01_09_HelloTriangle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ch1_10_Shaders1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
